# class_virtual

Новая папка/: CMakeLists.txt  main.cpp
